nav bag bug on mobile fixed

--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ footer {
 nav {
     position: fixed;
     width: 100%;
-    z-index: 10;
+    z-index: 20;
    
 }
 nav .nav-wrapper {
